--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>你的用户名为__zhan__</h1>
-  <script>
+  <!-- <script>
     // var a=1
     // console.log(a)
 
@@ -35,6 +35,6 @@
     //1280000/1024/1024约等于1.22MB
     localStorage.setItem('aaa',s)//然后乘以65倍存到LocalStorage里面是可以存储的，说明可以存储65MB，
     //但是如果乘以66倍就报错了，在Chrome浏览器的报错信息(index):36 Uncaught DOMException: Failed to execute 'setItem' on 'Storage': Setting the value of 'aaa' exceeded the quota.
-  </script>
+  </script> -->
 </body>
 </html>
