http缓存来加速说明

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
+  <link rel="stylesheet" href="default.css">
 </head>
 <body>
   <h1>你的用户名为__zhan__</h1>
@@ -36,5 +37,6 @@
     localStorage.setItem('aaa',s)//然后乘以65倍存到LocalStorage里面是可以存储的，说明可以存储65MB，
     //但是如果乘以66倍就报错了，在Chrome浏览器的报错信息(index):36 Uncaught DOMException: Failed to execute 'setItem' on 'Storage': Setting the value of 'aaa' exceeded the quota.
   </script> -->
+  <script src="main.js"></script>
 </body>
 </html>
